--- a/.gitmodules
+++ b/.gitmodules
@@ -3,3 +3,8 @@
 	url = https://github.com/r-universe-org/cran-to-git
 	shallow = true
 	branch = HEAD
+[submodule "rapiclient"]
+	path = rapiclient
+	url = https://github.com/bergant/rapiclient
+	shallow = true
+	registered = true
